# AIR5021_RobotManipulation_Project

./: README.md
devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
devel/include/sagittarius_llm_control/: DetectBlock.h  DetectBlockRequest.h  DetectBlockResponse.h  DetectColoredBlock.h  DetectColoredBlockRequest.h  DetectColoredBlockResponse.h  ExecuteNaturalLanguageTask.h  ExecuteNaturalLanguageTaskRequest.h  ExecuteNaturalLanguageTaskResponse.h
devel/include/sagittarius_object_color_detector/: HSVParamsConfig.h
devel/lib/pkgconfig/: sagittarius_descriptions.pc  sagittarius_drawstar_and_display.pc  sagittarius_gazebo.pc  sagittarius_joy.pc  sagittarius_llm_control.pc  sagittarius_moveit.pc  sagittarius_object_color_detector.pc  sagittarius_puppet_control.pc  sdk_sagittarius_arm.pc
devel/lib/sagittarius_joy/: sagittarius_joy
devel/lib/sagittarius_object_color_detector/: HSVParams_node  calibration_pose.py  color_classification_fixed.py  grasp_once.py
devel/lib/sagittarius_puppet_control/: puppet_control_node  puppet_control_single_node
devel/lib/sdk_sagittarius_arm/: sdk_sagittarius_arm
devel/share/sagittarius_descriptions/cmake/: sagittarius_descriptionsConfig.cmake
devel/share/sagittarius_drawstar_and_display/cmake/: sagittarius_drawstar_and_displayConfig.cmake
devel/share/sagittarius_gazebo/cmake/: sagittarius_gazeboConfig.cmake
devel/share/sagittarius_joy/cmake/: sagittarius_joy-msg-extras.cmake  sagittarius_joy-msg-paths.cmake  sagittarius_joyConfig.cmake
devel/share/sagittarius_llm_control/cmake/: sagittarius_llm_control-msg-extras.cmake  (+2 more)
src/sagittarius_ws/src/sagittarius_arm_ros/sagittarius_llm_control/: CMakeLists.txt  README.md  package.xml  setup.py
src/sagittarius_ws/src/sagittarius_arm_ros/sagittarius_llm_control/config/: runtime.yaml
src/sagittarius_ws/src/sagittarius_arm_ros/sagittarius_llm_control/docs/: USAGE.md  操作指南.md
src/sagittarius_ws/src/sagittarius_arm_ros/sagittarius_llm_control/launch/: llm_task_system.launch
src/sagittarius_ws/src/sagittarius_arm_ros/sagittarius_llm_control/prompts/: task_planner_system.txt
src/sagittarius_ws/src/sagittarius_arm_ros/sagittarius_llm_control/scripts/: llm_task_cli.py  llm_task_server.py
src/sagittarius_ws/src/sagittarius_arm_ros/sagittarius_llm_control/scripts/__pycache__/: llm_task_cli.cpython-312.pyc.1494762687344
src/sagittarius_ws/src/sagittarius_arm_ros/sagittarius_llm_control/src/sagittarius_llm_control/: __init__.py  config.py  deepseek_client.py  executor.py  planner.py  vision_client.py  vision_detector.py
src/sagittarius_ws/src/sagittarius_arm_ros/sagittarius_llm_control/src/sagittarius_llm_control/__pycache__/: vision_detector.cpython-312.pyc.2423555255600
src/sagittarius_ws/src/sagittarius_arm_ros/sagittarius_llm_control/srv/: DetectBlock.srv  ExecuteNaturalLanguageTask.srv
(+37 files in other folders)
